
- #8820: quoted extensions: {%foo|...|} is lighter syntax for
  [%foo {||}], and {%foo bar|...|bar} for [%foo {bar|...|bar}].
  (Gabriel Radanne, Leo White and Gabriel Scherer,
   request by Bikal Lem)

### Runtime system:

- #9119: Make [caml_stat_resize_noexc] compatible with the [realloc]
  API when the old block is NULL.
  (Jacques-Henri Jourdan, review by Xavier Leroy)

- #8920, #9229: New API for statistical memory profiling in Memprof.Gc.
  The new version does no longer use ephemerons and allows registering
  callbacks for promotion and deallocation of memory blocks.
  (Stephen Dolan and Jacques-Henri Jourdan, review by Damien Doligez
   and Gabriel Scherer)

### Code generation and optimizations:

- #8637, #8805: Record debug info for each allocation
  (Stephen Dolan and Jacques-Henri Jourdan, review by Damien Doligez,
   KC Sivaramakrishnan and Xavier Leroy)

- #9193: Make tuple matching optimisation apply to Lswitch and Lstringswitch.
  (Stephen Dolan, review by Thomas Refis and Gabriel Scherer)

### Standard library:

- #8771: Lexing: add set_position and set_filename to change (fake)
   the initial tracking position of the lexbuf.
   (Konstantin Romanov, Miguel Lumapat, review by Gabriel Scherer,
    Sébastien Hinderer, and David Allsopp)

- #9059: Added List.filteri function, same as List.filter but
  with the index of the element.
  (Léo Andrès, review by Alain Frisch)

- #8894: Added List.fold_left_map function combining map and fold.
  (Bernhard Schommer, review by Alain Frisch and github user @cfcs)

### Other libraries:

- #9106: Register printer for Unix_error in win32unix, as in unix.
  (Christopher Zimmermann, review by David Allsopp)

### Tools:

- #463: objinfo: better errors on object files coming
  from a different (older or newer), incompatible compiler version.
  (Gabriel Scherer, review by Gabriel Radanne and Damien Doligez)

- #9181: make objinfo work on Cygwin and look for the caml_plugin_header