@@ -482,6 +482,7 @@ void caml_memprof_minor_update(void)
         t->promoted = 1;
       } else {
         /* Block is dead */
+        CAMLassert_young_header(Hd_val(t->block));
         t->block = Val_unit;
         t->deallocated = 1;
       }
@@ -581,13 +582,34 @@ void caml_memprof_renew_minor_sample(void)
   caml_update_young_limit();
 }
 
+/* Temporary structure used by caml_memprof_track_young to handle
+   combined allocations (see asmcomp/comballoc.ml) */
+struct sampled_young_alloc {
+  /* offset, in words, from block start. 0 unless Comballoc applies */
+  unsigned header_ofs;
+  unsigned wosize;
+  unsigned n_samples;
+};
+
 /* Called when exceeding the threshold for the next sample in the
    minor heap, from the C code (the handling is different when called
    from natively compiled OCaml code). */
-void caml_memprof_track_young(tag_t tag, uintnat wosize, int from_caml)
+void caml_memprof_track_young(tag_t tag, uintnat wosize, int from_caml,
+                              int nallocs, unsigned char* encoded_alloc_lens)
 {
   CAMLparam0();
-  uintnat whsize = Whsize_wosize(wosize), n_samples;
+  uintnat whsize = Whsize_wosize(wosize);
+  unsigned n_samples = 0, alloc_idx = 0, alloc_wosz, i;
+  header_t *alloc_hp;
+  /* number of sampled allocated blocks
+     (possibly with more than one sample per allocation) */
+  uintnat allocs_sampled = 0;
+  /* usually, only one allocation is sampled, even when the block contains
+     multiple combined allocations. So, we delay allocating the full
+     sampled_allocs array until we discover we actually need two entries */
+  struct sampled_young_alloc first_sampled_alloc;
+  struct sampled_young_alloc* sampled_allocs = &first_sampled_alloc;
+  value first_cb_res, *cb_res;
   CAMLlocal3(callstack, res, sample_info);
 
   if (caml_memprof_suspended) {
@@ -601,10 +623,10 @@ void caml_memprof_track_young(tag_t tag, uintnat wosize, int from_caml)
      caml_memprof_young_trigger], which is contradictory. */
   CAMLassert(lambda > 0);
 
-  n_samples = 1 +
-    mt_generate_binom(caml_memprof_young_trigger - 1 - Caml_state->young_ptr);
-
   if (!from_caml) {
+    CAMLassert(encoded_alloc_lens == NULL);    /* No Comballoc in C! */
+    n_samples = 1 +
+      mt_generate_binom(caml_memprof_young_trigger - 1 - Caml_state->young_ptr);
     caml_memprof_renew_minor_sample();
 
     callstack = capture_callstack_postponed();
@@ -623,48 +645,116 @@ void caml_memprof_track_young(tag_t tag, uintnat wosize, int from_caml)
      call the callback and use as a sample the block which will be
      allocated right after the callback. */
 
-  /* Restore the minor heap in a valid state for calling the callback.
+  CAMLassert(Caml_state->young_ptr < caml_memprof_young_trigger &&
+             caml_memprof_young_trigger <= Caml_state->young_ptr + whsize);
+
+  alloc_wosz = encoded_alloc_lens == NULL ? wosize :
+    Wosize_encoded_alloc_len(encoded_alloc_lens[nallocs - 1 - alloc_idx]);
+  alloc_hp =
+    (header_t*)Caml_state->young_ptr + whsize - Whsize_wosize(alloc_wosz);
+  while (1) {
+    if (alloc_hp < (header_t*)caml_memprof_young_trigger) {
+      n_samples++;
+      caml_memprof_young_trigger -= mt_generate_geom();
+    } else {
+      /* Finished an allocation */
+      if (n_samples > 0) {
+        struct sampled_young_alloc* s;
+        if (allocs_sampled == 1) {
+          /* Found a second sampled allocation! Allocate a buffer for them */
+          sampled_allocs =
+            caml_stat_alloc_noexc(sizeof(struct sampled_young_alloc) * nallocs);
+          sampled_allocs[0] = first_sampled_alloc;
+        }
+        s = &sampled_allocs[allocs_sampled++];
+        s->header_ofs = alloc_hp - (header_t*)Caml_state->young_ptr;
+        s->wosize = alloc_wosz;
+        s->n_samples = n_samples;
+      }
+      alloc_idx++;
+      CAMLassert(alloc_idx <= nallocs);
+      if (alloc_idx == nallocs) {
+        CAMLassert(alloc_hp == (header_t*)Caml_state->young_ptr);
+        break;
+      }
+      /* Otherwise, move onto the next allocation in a Comballoc'd block */
+      alloc_wosz = Wosize_encoded_alloc_len(
+              encoded_alloc_lens[nallocs - 1 - alloc_idx]);
+      alloc_hp -= Whsize_wosize(alloc_wosz);
+      n_samples = 0;
+    }
+  }
+
+  CAMLassert(0 < allocs_sampled && allocs_sampled <= nallocs);
+
+  /* Restore the minor heap in a valid state for calling the callbacks.
      We should not call the GC before these two instructions. */
   Caml_state->young_ptr += whsize;
   caml_memprof_renew_minor_sample();
 
-  caml_memprof_suspended = 1;
-  callstack = capture_callstack();
-  sample_info = allocation_info(n_samples, wosize, tag, 0, callstack);
-  res = caml_callback_exn(callback_alloc_minor, sample_info);
-  caml_memprof_suspended = 0;
-  caml_memprof_check_action_pending();
-  /* We need to call [caml_memprof_check_action_pending] since we
-     reset [caml_memprof_suspended] to 0 (a GC collection may have
-     triggered some new callback). */
+  cb_res = allocs_sampled == 1 ? &first_cb_res :
+    caml_stat_alloc_noexc(sizeof(value) * allocs_sampled);
+  for (i = 0; i < allocs_sampled; i++) cb_res[i] = Val_unit;
+  {
+    CAMLxparamN(cb_res, allocs_sampled);
 
-  caml_raise_if_exception(res);
+    caml_memprof_suspended = 1;
+    callstack = capture_callstack();
+    for (i = 0; i < allocs_sampled; i++) {
+      struct sampled_young_alloc* s = &sampled_allocs[i];
+      sample_info = allocation_info(s->n_samples, s->wosize, tag, 0, callstack);
+      res = caml_callback_exn(callback_alloc_minor, sample_info);
+      if (Is_exception_result(res)) break;
+      cb_res[i] = res;
+    }
+    caml_memprof_suspended = 0;
+    caml_memprof_check_action_pending();
+    /* We need to call [caml_memprof_check_action_pending] since we
+       reset [caml_memprof_suspended] to 0 (a GC collection may have
+       triggered some new callback). */
 
-  /* We can now restore the minor heap in the state needed by
-     [Alloc_small_aux]. */
-  if (Caml_state->young_ptr - whsize < Caml_state->young_trigger) {
-    CAML_INSTR_INT("force_minor/memprof@", 1);
-    caml_gc_dispatch();
-  }
+    if (Is_exception_result(res)) {
+      if (sampled_allocs != &first_sampled_alloc)
+        caml_stat_free(sampled_allocs);
+      if (cb_res != &first_cb_res)
+        caml_stat_free(cb_res);
+      caml_raise(Extract_exception(res));
+    }
 
-  /* Re-allocate the block in the minor heap. We should not call the
-     GC after this. */
-  Caml_state->young_ptr -= whsize;
+    /* We can now restore the minor heap in the state needed by
+       [Alloc_small_aux]. */
+    if (Caml_state->young_ptr - whsize < Caml_state->young_trigger) {
+      CAML_INSTR_INT("force_minor/memprof@", 1);
+      caml_gc_dispatch();
+    }
 
-  /* Make sure this block is not going to be sampled again. */
-  shift_sample(whsize);
+    /* Re-allocate the blocks in the minor heap. We should not call the
+       GC after this. */
+    Caml_state->young_ptr -= whsize;
 
-  if (res != Val_unit) {
-    /* If the execution of the callback has succeeded, then we start the
-       tracking of this block..
+    /* Make sure this block is not going to be sampled again. */
+    shift_sample(whsize);
 
-       Subtlety: we are actually writing [t->block] with an invalid
-       (uninitialized) block. This is correct because the allocation
-       and initialization happens right after returning from
-       [caml_memprof_track_young]. */
-    new_tracked(n_samples, Make_header(wosize, tag, Caml_white),
-                0, 1, 1,
-                Val_hp(Caml_state->young_ptr), Field(res, 0));
+    for (i = 0; i < allocs_sampled; i++) {
+      struct sampled_young_alloc* s = &sampled_allocs[i];
+      if (cb_res[i] != Val_unit) {
+        /* If the execution of the callback has succeeded, then we start the
+           tracking of this block..
+
+           Subtlety: we are actually writing [t->block] with an invalid
+           (uninitialized) block. This is correct because the allocation
+           and initialization happens right after returning from
+           [caml_memprof_track_young]. */
+        new_tracked(s->n_samples, Make_header(s->wosize, tag, Caml_white),
+                    0, 1, 1,
+                    Val_hp(Caml_state->young_ptr + s->header_ofs),
+                    Field(cb_res[i], 0));
+      }
+    }
+    if (sampled_allocs != &first_sampled_alloc)
+      caml_stat_free(sampled_allocs);
+    if (cb_res != &first_cb_res)
+      caml_stat_free(cb_res);
   }
 
   /* /!\ Since the heap is in an invalid state before initialization,
