@@ -5,20 +5,18 @@
 
 open Gc.Memprof
 
-type 'a list2 =  (* A list type where [Cons] has tag 1 *)
-  | Nil
-  | Dummy of int
-  | Cons of 'a * 'a list2
-
-let root = ref Nil
+let roots = Array.make 25000 [| |]
 let[@inline never] allocate_arrays lo hi cnt keep =
   assert (0 < lo && hi <= 250);  (* Fits in minor heap. *)
   for j = 0 to cnt-1 do
     for i = lo to hi do
-      root := Cons (Array.make i 0, !root)
+      let alloc = Array.make i 0 in
+      if keep then roots.(j * 250 + i - 1) <- Sys.opaque_identity alloc
     done;
-    if not keep then root := Nil
   done
+
+let clear_roots () =
+  Array.fill roots 0 (Array.length roots) [| |]
 
 let check_nosample () =
   Printf.printf "check_nosample\n%!";
@@ -43,11 +41,11 @@ let check_counts_full_major force_promote =
   start ~callstack_size:10
         ~minor_alloc_callback:(fun info ->
           if !enable then begin
-            assert (info.tag = 0 || info.tag = 1);
+            assert (info.tag = 0);
             incr nalloc_minor; if !nalloc_minor mod 100 = 0 then Gc.minor ();
             Some (ref 42)
           end else begin
-            allocate_arrays 1 250 1 true;
+            allocate_arrays 1 250 1 false;
             None
           end)
         ~major_alloc_callback:(fun _ -> assert false)
@@ -64,20 +62,20 @@ let check_counts_full_major force_promote =
   if force_promote then begin
     Gc.full_major ();
     promotes_allowed := false;
-    allocate_arrays 1 250 10 true;
+    allocate_arrays 1 250 10 false;
     Gc.full_major ();
     assert (!ndealloc_minor = 0 && !ndealloc_major = 0 &&
             !npromote = !nalloc_minor);
-    root := Nil;
+    clear_roots ();
     Gc.full_major ();
     assert (!ndealloc_minor = 0 && !ndealloc_major = !nalloc_minor);
   end else begin
-    root := Nil;
+    clear_roots ();
     Gc.minor ();
     Gc.full_major ();
     Gc.full_major ();
-    assert (!nalloc_minor = !ndealloc_minor + !npromote &&
-            !ndealloc_major = !npromote)
+    assert (!nalloc_minor = !ndealloc_minor + !npromote);
+    assert (!ndealloc_major = !npromote)
   end;
   stop ()
 
@@ -113,14 +111,11 @@ let check_distrib lo hi cnt rate =
   start ~callstack_size:10
         ~major_alloc_callback:(fun _ -> assert false)
         ~minor_alloc_callback:(fun info ->
-          (* Exclude noise such as spurious closures and the root list. *)
-           if info.tag = 0 then begin
-             assert (info.size >= lo && info.size <= hi);
-             assert (info.n_samples > 0);
-             assert (not info.unmarshalled);
-             smp := !smp + info.n_samples
-           end;
-           None
+          assert (info.size >= lo && info.size <= hi);
+          assert (info.n_samples > 0);
+          assert (not info.unmarshalled);
+          smp := !smp + info.n_samples;
+          None
         )
         ~sampling_rate:rate ();
   allocate_arrays lo hi cnt false;
@@ -154,7 +149,9 @@ let[@inline never] check_callstack () =
   let callstack = ref None in
   start ~callstack_size:10
         ~minor_alloc_callback:(fun info ->
-          if info.tag = 0 then callstack := Some info.callstack;
+(*      Printf.printf "%d %d\n%!" info.tag info.size;
+        Printexc.print_raw_backtrace stdout info.callstack;*)
+          if info.size > 100 then callstack := Some info.callstack;
           None
         )
         ~sampling_rate:1. ();
