@@ -9,7 +9,7 @@ check_distrib 1 250 1000 0.900000
 check_distrib 1 1 10000000 0.010000
 check_distrib 250 250 100000 0.100000
 check_callstack
-Raised by primitive operation at file "arrays_in_minor.ml", line 18, characters 20-34
-Called from file "arrays_in_minor.ml", line 161, characters 2-35
-Called from file "arrays_in_minor.ml", line 167, characters 9-27
+Raised by primitive operation at file "arrays_in_minor.ml", line 13, characters 18-32
+Called from file "arrays_in_minor.ml", line 158, characters 2-35
+Called from file "arrays_in_minor.ml", line 164, characters 9-27
 OK !
