@@ -1,0 +1,9 @@
+2: 0.42
+3: 0.42
+4: 0.42
+2: 0.01
+3: 0.01
+4: 0.01
+2: 0.83
+3: 0.83
+4: 0.83
