@@ -1,6 +1,10 @@
 (* TEST
    flags = "-g"
    * bytecode
+     reference = "${test_source_directory}/lists_in_minor.byte.reference"
+   * native
+     reference = "${test_source_directory}/lists_in_minor.opt.reference"
+     compare_programs = "false"
 *)
 
 open Gc.Memprof
